--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,21 +56,26 @@
     <Compile Include="Assets\Runtime\UI\UIBar.cs" />
     <Compile Include="Assets\Runtime\Util\Extension.cs" />
     <Compile Include="Assets\Runtime\Weapons\ViewAnimator.cs" />
-    <Compile Include="Assets\Runtime\Animation\FabrIKRoot.cs" />
     <Compile Include="Assets\Runtime\Weapons\Gun.cs" />
     <Compile Include="Assets\Runtime\Mods\GunMods\Combine.cs" />
     <Compile Include="Assets\Runtime\Weapons\SlideAnimator.cs" />
     <Compile Include="Assets\Runtime\Util\NetworkTestUI.cs" />
-    <Compile Include="Assets\Runtime\Animation\FabrIKNode.cs" />
+    <Compile Include="Assets\Runtime\Damage\DamageScalar.cs" />
     <Compile Include="Assets\Runtime\Damage\DamageArgs.cs" />
+    <Compile Include="Assets\Runtime\Animation\GunModel3rdPerson.cs" />
+    <Compile Include="Assets\Runtime\Player\PlayerInstance.cs" />
+    <Compile Include="Assets\Runtime\Animation\ArmAnimation.cs" />
     <Compile Include="Assets\Runtime\Damage\HealthBar.cs" />
+    <Compile Include="Assets\Runtime\Level\GunTrigger.cs" />
     <Compile Include="Assets\Runtime\Player\PlayerUI.cs" />
     <Compile Include="Assets\Runtime\Mods\GunMods\Homing.cs" />
     <Compile Include="Assets\Runtime\Stats\Stat.cs" />
     <Compile Include="Assets\Runtime\Util\Utility.cs" />
+    <Compile Include="Assets\Runtime\Networking\NetworkedBody.cs" />
     <Compile Include="Assets\Runtime\Stats\StatModification.cs" />
     <Compile Include="Assets\Runtime\Stats\StatBoard.cs" />
     <Compile Include="Assets\Runtime\Damage\HealthController.cs" />
+    <Compile Include="Assets\Runtime\Animation\BodyAnimator.cs" />
     <Compile Include="Assets\Runtime\Player\PlayerAvatar.cs" />
     <None Include="Assets\Shaders\Skybox-Procedural.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
