--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Assets\Runtime\Weapons\Projectile.cs" />
     <Compile Include="Assets\Runtime\Damage\Damageable.cs" />
     <Compile Include="Assets\Runtime\Weapons\GunAnimator.cs" />
+    <Compile Include="Assets\Runtime\Gamemodes\SandboxGamemode.cs" />
     <Compile Include="Assets\Runtime\UI\UIBar.cs" />
+    <Compile Include="Assets\Runtime\Gamemodes\Gamemode.cs" />
     <Compile Include="Assets\Runtime\Util\Extension.cs" />
     <Compile Include="Assets\Runtime\Weapons\ViewAnimator.cs" />
     <Compile Include="Assets\Runtime\Weapons\Gun.cs" />
@@ -64,6 +66,8 @@
     <Compile Include="Assets\Runtime\Damage\DamageArgs.cs" />
     <Compile Include="Assets\Runtime\Damage\PlayerHealthController.cs" />
     <Compile Include="Assets\Runtime\Animation\GunModel3rdPerson.cs" />
+    <Compile Include="Assets\Runtime\UI\Hitmarker.cs" />
+    <Compile Include="Assets\Runtime\Player\PlayerRagdoll.cs" />
     <Compile Include="Assets\Runtime\Player\PlayerInstance.cs" />
     <Compile Include="Assets\Runtime\Animation\ArmAnimation.cs" />
     <Compile Include="Assets\Runtime\Damage\HealthBar.cs" />
@@ -89,6 +93,7 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\FishNet\VERSION.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\Shaders\UberLitPass.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
