--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -43,10 +43,10 @@
   <ItemGroup>
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.16f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.SourceGenerators.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.16f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
-    <Analyzer Include="D:\Documents\Development\Unity\Projects\Circles3D\Library\PackageCache\com.firstgeargames.fishnet@4f126df78c\Runtime\Plugins\CodeAnalysis\FishNet.CodeAnalysis.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\Shortcuts.cs" />
+    <Compile Include="Assets\Editor\CleanupMissingScripts.cs" />
     <Compile Include="Assets\Editor\StatPropertyDrawer.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.16f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
@@ -305,9 +305,6 @@
     </Reference>
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.16f1\Editor\Data\PlaybackEngines\WindowsStandaloneSupport\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="FishNet.CodeAnalysis">
-      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\PackageCache\com.firstgeargames.fishnet@4f126df78c\Runtime\Plugins\CodeAnalysis\FishNet.CodeAnalysis.dll</HintPath>
     </Reference>
     <Reference Include="ReportGeneratorMerged">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\PackageCache\com.unity.testtools.codecoverage@1.2.4\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
@@ -702,15 +699,6 @@
     <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
     </Reference>
-    <Reference Include="FishNet.Runtime">
-      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\FishNet.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Edgegap">
-      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\Edgegap.dll</HintPath>
-    </Reference>
-    <Reference Include="FishNet.Demos">
-      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\FishNet.Demos.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.EditorCoroutines.Editor">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\Unity.EditorCoroutines.Editor.dll</HintPath>
     </Reference>
@@ -728,9 +716,6 @@
     </Reference>
     <Reference Include="Unity.ShaderGraph.Editor">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\Unity.ShaderGraph.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="FishNet.Codegen.Cecil">
-      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\FishNet.Codegen.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
@@ -767,9 +752,6 @@
     </Reference>
     <Reference Include="Unity.InputSystem.ForUI">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\Unity.InputSystem.ForUI.dll</HintPath>
-    </Reference>
-    <Reference Include="GameKit.Dependencies">
-      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\GameKit.Dependencies.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Performance.Profile-Analyzer.Editor">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Library\ScriptAssemblies\Unity.Performance.Profile-Analyzer.Editor.dll</HintPath>
