--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Runtime\UI\Hitmarker.cs" />
     <Compile Include="Assets\Runtime\Player\PlayerRagdoll.cs" />
     <Compile Include="Assets\Runtime\Player\PlayerInstance.cs" />
+    <Compile Include="Assets\Runtime\Player\BipedController.cs" />
     <Compile Include="Assets\Runtime\Networking\InputManager.cs" />
     <Compile Include="Assets\Runtime\Animation\ArmAnimation.cs" />
     <Compile Include="Assets\Runtime\Damage\HealthBar.cs" />
@@ -324,17 +325,11 @@
     <Reference Include="Fusion.Common">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Assets\Photon\Fusion\Assemblies\Fusion.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Fusion.Addons.SimpleKCC.Editor">
-      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Assets\Photon\FusionAddons\SimpleKCC\Fusion.Addons.SimpleKCC.Editor.dll</HintPath>
-    </Reference>
     <Reference Include="NanoSockets">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Assets\Photon\Fusion\Plugins\NanoSockets\NanoSockets\Dynamic\NanoSockets.dll</HintPath>
     </Reference>
     <Reference Include="Fusion.Sockets">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Assets\Photon\Fusion\Assemblies\Fusion.Sockets.dll</HintPath>
-    </Reference>
-    <Reference Include="Fusion.Addons.SimpleKCC">
-      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Assets\Photon\FusionAddons\SimpleKCC\Fusion.Addons.SimpleKCC.dll</HintPath>
     </Reference>
     <Reference Include="Fusion.Runtime">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Assets\Photon\Fusion\Assemblies\Fusion.Runtime.dll</HintPath>
@@ -353,6 +348,12 @@
     </Reference>
     <Reference Include="Fusion.Realtime">
       <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Assets\Photon\Fusion\Assemblies\Fusion.Realtime.dll</HintPath>
+    </Reference>
+    <Reference Include="Fusion.Addons.SimpleKCC">
+      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Assets\Photon\FusionAddons\SimpleKCC\Fusion.Addons.SimpleKCC.dll</HintPath>
+    </Reference>
+    <Reference Include="Fusion.Addons.SimpleKCC.Editor">
+      <HintPath>D:\Documents\Development\Unity\Projects\Circles3D\Assets\Photon\FusionAddons\SimpleKCC\Fusion.Addons.SimpleKCC.Editor.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.16f1\Editor\Data\NetStandard\ref\2.1.0\netstandard.dll</HintPath>
